:bell: fixing methods for bot, better logging
