# app/app/Http/Controllers/Api/DocumentController.php
@@ -31,11 +31,11 @@ class DocumentController extends Controller
     /**
     * @OA\Post(
     * path="/ECLI/BE/{court_acronym}/docsFilter",
+    * tags={"ECLI"},
     * summary="Filter documents of a court",
     * description="Filter documents of a court",
     * operationId="ECLI",
-    * tags={"ECLI"},
-     * @OA\Parameter(
+    * @OA\Parameter(
      *          name="court_acronym",
      *          description="Court acronym",
      *          required=true,
@@ -44,6 +44,34 @@ class DocumentController extends Controller
      *              type="string"
      *          )
      *      ),
+     * @OA\RequestBody(
+     *        description = "data arrays",
+     *          required=true,
+     *          @OA\JsonContent(
+     *   @OA\Property(
+     *                property="data",
+     *                type="array",
+     *     @OA\Items(
+     *      @OA\Property(
+     *       property="lang",
+     *       type="string",
+     *       example="['french', 'dutch']"
+     *       ),
+     * @OA\Property(
+     *       property="year",
+     *       type="string",
+     *       example="['2001', '1983']"
+     *       ),
+     *  @OA\Property(
+     *       property="type",
+     *       type="string",
+     *       example="['AVIS', 'JUG']"
+     *       ),
+     *      )
+     *      )
+     *    )
+     * ),
+     * https://github.com/zircote/swagger-php/issues/728
     * security={ {"bearer": {} }},
     * @OA\Response(
     *    response=200,
@@ -71,12 +99,12 @@ class DocumentController extends Controller
         $court = Court::whereAcronym($court_acronym)->firstOrFail();
 
         $documents = Document::whereCourtId($court->id)
-        ->orderBy('updated_at', 'desc')
+        ->orderBy('year', 'desc')
+        ->orderBy('identifier', 'desc')
         ->paginate(20);
 
         return DocumentResource::collection($documents);
     }
-
    
 
     public function docsPerYear($court_acronym, $year)
@@ -85,6 +113,8 @@ class DocumentController extends Controller
 
         $documents = Document::whereCourtId($court->id)
         ->where('year', $year)
+        ->orderBy('year', 'desc')
+        ->orderBy('identifier', 'desc')
         ->paginate(20);
 
         return DocumentResource::collection($documents);
@@ -95,6 +125,8 @@ class DocumentController extends Controller
         $court = Court::whereAcronym($court_acronym)->firstOrFail();
         $documents = Document::whereCourtId($court->id)
         ->where('lang', $lang)
+        ->orderBy('year', 'desc')
+        ->orderBy('identifier', 'desc')
         ->paginate(20);
 
         return DocumentResource::collection($documents);
@@ -106,6 +138,8 @@ class DocumentController extends Controller
 
         $documents = Document::whereCourtId($court->id)
         ->where('type', $type)
+        ->orderBy('year', 'desc')
+        ->orderBy('identifier', 'desc')
         ->paginate(20);
 
         return DocumentResource::collection($documents);
